--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,14 +3,16 @@ body, div, p {
 }
 
 .main__text1, .main__text2, .header__text, .title {
-    font-family: 'Russo One', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 .main__text3, .nav__link, .main__btn, .block__text1, .block__text2, .block__text3, .description, .card__description, .about-text, .cont-text, .about-nav, .ph, .inst, .email, .copyright, .hours {
-    font-family: 'Muller', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    
     font-weight: 400;
 }
 .block__number1, .block__number2, .block__number3, .title-number, .title-heading, .cont-title{
-    font-family: 'Muller', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    
     font-weight: 700;
 }
 @font-face {
@@ -44,17 +46,24 @@ body, div, p {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
-    height: 80px;
-    margin: 0 auto;
+    /* padding: 10px; */
+    /* margin: 0 auto; */
     max-width: 1150px;
+    width: 1080px;
+    height: 91px;
+    flex-shrink: 0;
+    padding-top: 60px;
+    gap: 80px;
+    margin-left: 100px;
+    margin-right: 110px;
+    
 }
 .container
 {
     margin: 0 auto;
     max-width: 1150px;
     width: 1150px;
-    padding: 30px 40px;
+    padding: 30px 110px;
 }
 
 .header__nav {
@@ -63,7 +72,7 @@ body, div, p {
 .header__nav ul {
     display: grid;
     grid-template-columns: repeat(3, auto);
-    gap: 40px;
+    gap: 80px;
   }
   .nav__item {
     display: flex;
@@ -80,31 +89,85 @@ body, div, p {
     color: black;
     text-decoration: none;  
 }
+.header__lang {
+    width: 77px;
+    height: 23px;
+    flex-shrink: 0;
+    padding-left: 23px;
+}
+.header__langUA {
+    color: #000;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+.header__langEN {
+    color: #000;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
   
 .header__logo-text {
     display: flex;
     align-items: center;
+    width: 425px;
+    height: 91px;
+    flex-shrink: 0;
+    margin-right: 0;
 }
   
 .header__logo {
-    margin-right: 10px;
+    margin-right: 7px;
+    width: 77.574px;
+    height: 80.557px;
+    flex-shrink: 0;
 }
   
 .header__text {
     color: #46b1de;
-    font-size: larger;
-    white-space: pre-wrap;
-    margin-left: -65px;
+    text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    font-family: 'Sofia Sans', sans-serif;
+    font-size: 38px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+    width: 425.218px;
+    height: 91px;
+    flex-shrink: 0;
   }
-  
-.number {
+  .header__text__2 {
     display: flex;
+    width: 84px;
+    flex-direction: column;
+    flex-shrink: 0;
+    color: #46B1DE;
+    font-family: 'Sofia Sans', sans-serif;
+    font-size: 26.852px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+    
+  }
+.number {
+    width: 174px;
+    height: 24px;
+    flex-shrink: 0;
+    align-items: center;
 }
   
 .header__number {
-    margin-left: 10px;
-    color: black;
-    text-decoration: none;
+    color: #1B1D1F;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 .main {
     /* height: calc(100vh - 80px); */
@@ -117,60 +180,127 @@ body, div, p {
 
     
 }
+.main__text__layout {
+    display: flex;
+    width: 530px;
+    flex-direction: column;
+    flex-shrink: 0; 
+}
 .main__text1 {
-    font-size: 34px;
+    /* font-size: 34px;
     text-transform: uppercase;
     white-space: pre-line;
     font-weight: bold;
     margin: 0 auto;
     max-width: 1150px;
-    /* margin-bottom: -35px; */
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 130%;
+    letter-spacing: 4px;
+    margin-bottom: -35px; */
+    
+    white-space: pre-line;
+    color: #1B1D1F;
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 130%;
+    letter-spacing: 4px;
+    text-transform: uppercase;
     
 }
 .main__text2 {
     font-size: 28px;
     text-transform: uppercase;
     color: #46b1de;
-    /* padding-left: 100px; */
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 130%;
+    letter-spacing: 4px;
 }
+
 .main__text3 {
-    font-size: 18px;
-    font-weight: bold;
-    /* padding-left: 49px; */
-    white-space: normal;
-    /* margin-top: -18px; */
-    width: 500px; 
+    display: flex;
+    width: 464px;
+    flex-direction: column;
+    flex-shrink: 0;
+    color: #1B1D1F;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
 }
 .main__btn{
-    padding: 10px 10px;
+    /* padding: 10px 10px; */
     text-decoration: none;
+    display: flex;
+    gap: 120px;
 }
 .btn1{
-    border: solid 1px;
+    /* border: solid 1px;
     background-color: #46b1de;
     color: white;
     border-color: black;
     margin-right: 80px;
-    padding: 10px 30px 10px 30px;
+    padding: 10px 30px 10px 30px; */
+    display: flex;
+    width: 180px;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: linear-gradient(140deg, #46B1DE 0%, #0591CC 100%);
+    box-shadow: 0px 2px 10px 0px #46B1DE;
+    padding: 0;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%;
+
 }
 
 .btn2{
-    border: solid 1px;
-    border-color: black; 
-    color: #46b1de;
-    background-color: white;
+    display: flex;
+    width: 180px;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    border: 1px solid #DDE0DC;
+    background: #FFF;
+    box-shadow: 0px 2px 10px 0px #DDE0DC;
+    color: #46B1DE;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%;
+
 }
 .main__block{
     text-align: center;
     display: grid;
     grid-template-columns: 250px 250px 250px;
-    gap: 40px;
-    margin-top: 90px;
+    gap: 70px;
+    margin-top: -85px;
     justify-content: center;
 }
   
 .block{
-      margin: 0 auto;
+      /* margin: 0 auto;
       padding: 0;
       display: flex;
       width: 250px;
@@ -178,14 +308,25 @@ body, div, p {
       background-color: white;
       border: solid 1px black;
       border-radius: 8px;
-      overflow: auto;
+      overflow: auto; */
+      display: flex;
+      margin: 0 auto;
       position: relative;
       z-index: 1;
-      gap: 0;    
+      width: 280px;
+      height: 120px;
+      flex-shrink: 0;
+      border-radius: 8px;
+      border: 1px solid #D8E1E1;
+      background: #FFF;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      justify-content: center;
+      gap: 7px;
+      align-items: center;
 }
   
 .block__number1{
-      width: 46px;
+      /* width: 46px;
       float: left;
       height: 46px;
       padding-top: 10px;
@@ -195,11 +336,24 @@ body, div, p {
       color: #46b1de;
       display: flex;
       padding: 10px;
-      padding-top: 17px;
+      padding-top: 17px; */
+      display: flex;
+      width: 93px;
+      height: 120px;
+      flex-direction: column;
+      justify-content: center;
+      flex-shrink: 0;
+      color: #46B1DE;
+      text-align: center;
+      font-family: 'Roboto', sans-serif;
+      font-size: 65px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
 } 
   
 .block__number2{
-      width: 80px;
+      /* width: 80px;
       padding-top: 10px;
       float: left;
       height: 46px;
@@ -209,11 +363,24 @@ body, div, p {
       color: #46b1de;
       display: flex;
       padding: 10px;
-      padding-top: 17px;
+      padding-top: 17px; */
+      display: flex;
+      width: 133px;
+      height: 120px;
+      flex-direction: column;
+      justify-content: center;
+      flex-shrink: 0;
+      color: #46B1DE;
+      text-align: center;
+      font-family: 'Roboto', sans-serif;
+      font-size: 65px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
 }
   
 .block__number3{
-      width: 46px;
+      /* width: 46px;
       float: left;
       height: 46px;
       padding: 0;
@@ -222,19 +389,41 @@ body, div, p {
       font-weight: bold;
       color: #46b1de;
       padding: 10px;
-      padding-top: 17px;
+      padding-top: 17px; */
+      display: flex;
+      width: 96px;
+      height: 120px;
+      flex-direction: column;
+      justify-content: center;
+      flex-shrink: 0;
+      color: #46B1DE;
+      text-align: center;
+      font-family: 'Roboto', sans-serif;
+      font-size: 65px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
       
 }
   
 .block__text1{
-      text-align: left;
+      /* text-align: left;
       float: right;
       clear: right;
       width: 160px;
       height: auto;
       margin-right: 0;
       white-space: normal;
-      padding: 10px;
+      padding: 10px; */
+      font-family: 'Roboto', sans-serif;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      text-align: left;
+      width: 146px;
+      
+      
       
 }
   
@@ -267,9 +456,11 @@ body, div, p {
     top: 159px;
     right: 90px;
 }
-
+.secondscr__text {
+    gap: 5px;
+}
 .second__screen{
-    margin-top: 100px;
+    margin-top: 147px;
     height: 800px;
     width: 100vw;
 
@@ -278,13 +469,22 @@ body, div, p {
 }
 
 .title{
-    font-size: 26px;
+    font-size: 34px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%; /* 44.2px */
     text-align: center;
+    color:#1B1D1F;
+
 }
 
 .title__blue{
-    color: #46b1de;
-    font-weight: bolder;
+    color: #46B1DE;
+    font-family: 'Roboto', sans-serif;
+    font-size: 34px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 130%;
 }
 
 .description{
@@ -293,17 +493,58 @@ body, div, p {
     text-align: center;
 }
 .cards {
+    padding-top: 16px;
+    padding-bottom: 16px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(3, 330px);
-    grid-template-rows: repeat(2, 160px);
-    gap: 20px;
-    padding: 40px;
-    background-color: rgb(198, 210, 244);
-    border-radius: 8px;
-    width: 1000px;
+    grid-template-columns: repeat(3, 300px);
+    grid-template-rows: repeat(2, 176px);
+    gap: 12px 40px;
+    /* margin-bottom: 50px;
+    padding: 40px; */
     justify-content: center;
-    margin-bottom: 200px;
+    align-items: center;
+    border-radius: 12px;
+    background: #A1C7D4;
+    width: 1020px;
+    flex-shrink: 0;
+}
+@media (max-width:992px) {
+    .cards {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 300px);
+    grid-template-rows: repeat(3, 176px);
+    gap: 12px 40px;
+    /* margin-bottom: 50px;
+    padding: 40px; */
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    background: #A1C7D4;
+    width: 1020px;
+    height: 396px;
+    flex-shrink: 0;
+}
+}
+
+@media (max-width:480px) {
+    .cards {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(1, 300px);
+    grid-template-rows: repeat(6, 176px);
+    gap: 12px 40px;
+    /* margin-bottom: 50px;
+    padding: 40px; */
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    background: #A1C7D4;
+    width: 1020px;
+    height: 396px;
+    flex-shrink: 0;
+}
 }
 
 .title-number, .title-heading{
@@ -312,38 +553,181 @@ body, div, p {
     padding: 10px;
 }
 .title-number {
-    font-size: 38px;
+    display: flex;
+    width: 80px;
+    height: 56px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #46B1DE;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 0;
    
 }
 .title-heading {
-    /* white-space: normal; */
+    white-space: pre-line;
+    width: 193px;
+    height: 38px;
+    flex-shrink: 0;
     display: flex;
+    color: #46B1DE;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    align-items: center;
+    padding: 0;
+}
+.class_1_prewrap {
+    padding-top: 9px;
 }
 .card1, .card2, .card3, .card4, .card5, .card6{
     margin: 0 auto;
     width: 300px;
-    height: 140px;
+    height: 176px;
     background-color: white;
-    /* border: solid 1px; */
     position: relative;
     border-radius: 8px;
-    padding: 10px;
+    background: #FFF;
 }
 .card__title {
-    height: 50px;
+    height: 56px;
     display: flex;
-    align-items: center;
 }
 .card__description {
-    padding: 10px;
+    padding: 16px;
     margin: 0;
+    width: 267px;
+    color:#1B1D1F;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.third__screen{
+
+    width: 845px;
+    height: 265px;
+    background-color: #ffffff;
+    padding: 10px;
+    box-shadow:  0 3px 10px 4px rgba(2, 4, 30, 0.105);
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 87px;
+    margin-bottom: 100px;
+}
+.inner-rectangle {
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    border: 1px solid;
+    border-color: #D9D9D9;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.make{
+    text-align: center;
+}
+
+
+.fill{
+    text-align: center; 
+}
+
+.input-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .input-wrapper {
+    position: relative;
+    margin-right: 50px;
+  }
+  
+  .input-wrapper input {
+    /* width: 233px; */
+    height: 57px;
+    background-color: #D9D9D9B5;
+    border-radius: 8px;
+    border: none;
+    padding-left: 69px;
+  }
+
+  
+  .icon-name {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    width: 24px;
+    height: 24px;
+    background-image: url(/img/user\ 4.png);
+    background-size: cover;
+  }
+  
+  .icon-phone {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    width: 24px;
+    height: 24px;
+    background-image: url(/img/-phone-in-talk_90490\ 4.svg);
+    background-size: cover;
+}
+
+
+.sign_up_button{
+    width: 180px;
+    height: 57px;
+    background-color: #46B1DE;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    font-weight: bold;
+    
+}
+.input-form {
+    margin: 0 auto;
+}
+
+.img-third{
+    height: 129px;
+    flex-shrink: 0;
+    display: grid;
+    grid-template-columns:repeat(3,  280px);
+    grid-template-rows: repeat(1,  129px);
+    margin-bottom: 100px;
+    text-align: center;
+    justify-content: center;
+    gap: 69px;
+    margin-top: 90px;
+    margin-bottom: 90px;
+  }
+
+.photo{
+    width: 280px;
+    height: 128px;
 }
 
 .footer{
     height: 400px;
     width: 100vw;
-    /* border-color: #0F2C4A;
-    border: solid 1px; */
     background: linear-gradient(to bottom right, #A1C7D4, #067FAA);
     padding: 60px 40px 0 40px;
     display: flex;
